--- a/index.css
+++ b/index.css
@@ -1,29 +1,33 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     font-family: sans-serif;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: black;
 }
-.card{
+
+.card {
     background: linear-gradient(145deg, rgb(181, 181, 236), skyblue);
     width: 90%;
-    max-width: 470px;
+    max-width: 450px;
     color: white;
     margin: 100px auto 0;
     padding: 40px 35px;
     border-radius: 20px;
     text-align: center;
 }
-.search{
+
+.search {
     width: 100%;
     display: flex;
     text-align: center;
     justify-content: space-between;
 }
-.search input{
+
+.search input {
     border: 0;
     outline: 0;
     background: wheat;
@@ -35,7 +39,8 @@ body{
     font-size: 18px;
     border-radius: 30px;
 }
-.search button{
+
+.search button {
     border: 0;
     outline: 0;
     background: wheat;
@@ -44,42 +49,85 @@ body{
     cursor: pointer;
     border-radius: 50%;
 }
-.search button img{
+
+.search button img {
     width: 16px;
 }
-.weather-icon{
+
+.weather-icon {
     width: 170px;
     margin: 20px;
 }
-.weather h1{
+
+.weather h1 {
     font-size: 80px;
     font-weight: 500;
 }
-.weather h2{
+
+.weather h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
 }
-.details{
+
+.details {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     margin-top: 50px;
 }
-.col{
+
+.col {
     display: flex;
     align-items: center;
     text-align: left;
 }
-.col img{
+
+.col img {
     width: 40px;
     margin-right: 10px;
 }
-.humidity, .wind{
+
+.humidity,
+.wind {
     font-size: 28px;
     margin-top: -6px;
 }
-.weather{
-    display:none;
+
+
+@media screen and (max-width:450px) {
+    .card {
+        margin: 100px 0px;
+        padding: 40px 20px;
+    }
+    .search input {
+        padding: 10px 15px;
+        font-size: 16px;
+    }
+
+    .weather h1 {
+        font-size: 60px;
+    }
+
+    .weather h2 {
+        font-size: 35px;
+    }
+
+    .weather-icon {
+        width: 150px;
+    }
+
+    .details {
+        padding: 0 10px;
+    }
+
+    .col img {
+        width: 30px;
+    }
+
+    .humidity,
+    .wind {
+        font-size: 24px;
+    }
 }
